--- a/style.css
+++ b/style.css
@@ -1,6 +1,17 @@
-html {
+html, button {
     font-family: IBM Plex Sans Thai,-apple-system,BlinkMacSystemFont
 }
+
+button {
+    background-color: transparent;
+    border-width: 0;
+    font-family: inherit;
+    font-size: inherit;
+    font-style: inherit;
+    font-weight: inherit;
+    line-height: inherit;
+    padding: 0;
+  }
 
 .poll {
     background-color: #F3F4F5;
