--- a/style.css
+++ b/style.css
@@ -30,8 +30,12 @@ button {
     transition: opacity 1s;
 }
 
-.poll-head p {
-    margin-top: 0px;
+#poll-head p {
+    margin-top: 8px;
+    margin-bottom: 28px;
+    font-weight: bold;
+    font-size: 1.1rem;
+    padding-left: 10px;
 }
 
 #poll-body {
@@ -39,6 +43,7 @@ button {
     flex-wrap: wrap;
     gap: 13px;
     transition: opacity 1s;
+    margin-bottom: 15px;
 }
 
 @font-face {
