--- a/style.css
+++ b/style.css
@@ -27,7 +27,7 @@ button {
 }
 
 #poll-head {
-    transition: opacity 1s;
+    transition: opacity 0.7s;
 }
 
 #poll-head p {
@@ -42,8 +42,23 @@ button {
     display: flex;
     flex-wrap: wrap;
     gap: 13px;
-    transition: opacity 1s;
+    transition: opacity 0.7s;
     margin-bottom: 15px;
+}
+
+@media (max-width: 640px) {
+    .poll {
+        width: 100%;
+        margin-left: 5px;
+        margin-right: 5px;
+        flex: 1;
+    }
+
+    body {
+        display: flex;
+        
+    }
+    
 }
 
 @font-face {
